.. -*- mode: rst -*- vim: ft=rst

.. _cmake-release-notes:

Release Notes
=============

main
----

* fix apple linker detection for Xcode 15.3

Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.2

* remove non-existent email address
* Delete mailinglist files (#3357)
* Remove all tab characters used for indentation from python files (#3300)
* Update deprecated cmake features
* Add "no lint" guards around our logging macros
* Add "-Wno-maybe-uninitialized" to to our global list of suppressed warnings

Dec. 15, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.1

* bump the new IceTray version number

Dec. 14, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.9.0

* Remove Uber Header (I3.h) (#3151)
* add __version__ to icetray (#3303)
* cmake - add dfa127f to tarball-env-shell.sh.in (#3290)
* general python cleanups (ruff/E713) (#3269)
* update macos "step-by-step" docs
* allow quoted arguments to tarbar-env-shell (#3239)
* fix boost detection with parasitic builds (#3230)
* update linker flags for Xcode 15 (#3200)
* fix boost detection with parasitic builds

Sep. 28, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.8.0

* fix opencl detection on cvmfs when no host opencl is installed (#3177)

June 22, 2023 don la dieu (nega at icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.7.0

* Documentation cleanups
* Remove all references to load_pybindings (#3086)
* Remove BUILD_PYBINDINGS global cmake option. We always build pybindings.
* Add support for cvmfs py3-v4.3.0 (#3098)
* General docs cleanups

Apr. 12, 2023 don la dieu (nega AT icecube.umd.edu)
---------------------------------------------------
IceTray Release v1.6.0
