@@ -8,6 +8,7 @@ Release Notes
 main
 ----
 
+* fix OpenCL detection with cvmfs
 * fix apple linker detection for Xcode 15.3
 
 Feb. 20, 2024 don la dieu (nega at icecube.umd.edu)
